add tests @JsonTest, fixed ItemRequestServiceImpl and RequestClient